--- a/inst/README
+++ b/inst/README
@@ -22,7 +22,7 @@ useful.
 
 INSTALLATION
 
-1. Download the g-zipped tar archive  AnalyzeFMRI_1.0-1.tar.gz
+1. Download the g-zipped tar archive  AnalyzeFMRI_1.0-1.tar.gz (or a newer version if available from the web-site)
 
 2. Unzip the file using        gunzip AnalyzeFMRI_1.0-1.tar.gz
 
