--- a/inst/HISTORY
+++ b/inst/HISTORY
@@ -71,3 +71,10 @@ Version 1.0-8 :
  Version 1.1-0
 
 -implemented Brian's changes
+
+2005-06-17
+----------
+
+ Version 1.1-3
+
+-bug fix in function f.read.analyze.slice.at.all.timepoints discovered by Russell V. Lenth
