--- a/inst/HISTORY
+++ b/inst/HISTORY
@@ -93,3 +93,11 @@ Version 1.0-8 :
 
 -bug fixes in R functions cluster.threshold and f.read.analyze.ts
 -bug fix in C function create_data_matrix_JM
+
+2006-05-16
+----------
+
+ Version 1.1-6
+
+-Brian made changes to separate out slamc.f
+
