--- a/inst/HISTORY
+++ b/inst/HISTORY
@@ -218,3 +218,14 @@ Version 1.0-8 :
 
 - I modified the file plot.volume.gui.R to correct a bug: the sliders did not move on the anatomical when you clicked on the functional (and vice versa)
 - In this same file, I also changed order <- -1 into order <- -1*sign(L$pixdim[2]) (in the function orientation()) and hdr.anat$pixdim[2] into abs(hdr.anat$pixdim[2])
+
+2011-10-19
+----------
+
+ Version 1.1-14
+
+- I changed the CITATION file
+- I modified line 190 of file spatial.mixture.R to: y <- vector(length = k + 2)
+  This was to suppress a warning at the compilation of the package.
+- I modified line 950of file analyzeFMRI.R to: jpeg(filename = paste(file, ".comp.", i, ".jpeg", sep = ""), width = width, height = height)
+- removing of compilation warnings in slapack.f
